# MKProj.com

./: Cargo.toml  README.md  curr_proj.html  feed.xml  index.html
json/: texcore.json  texcreate.json
src/: main.rs
src/index/: feed.rs  mod.rs
src/project/: mod.rs
templates/: base.html  base_proj.html
