[package]
name = "mkproj_com"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.2"
rss = "2.0.1"
crossbeam = "0.8.2"
chrono = "0.4.22"
lazy_static = "1.4.0"
serde = {version = "1", features = ["derive"]}
toml = "0.5.9"
